--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,11 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#ED19B7FF</item>
+        <item name="colorPrimaryVariant">#ED19B7FF</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">#FFFFFF</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -14,11 +14,11 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <color name="purple_500">purple_500</color>
+    <color name="purple_500">#ED19B7FF</color>
     <color name="purple_200">purple_500</color>
     <color name="purple_700">purple_700</color>
     <color name="white"><![CDATA[white</item>]]></color>
-    <color name="teal_200">teal_200</color>
+    <color name="teal_200">#FFFFFF</color>
     <color name="teal_700">teal_700</color>
     <color name="black">black</color>
 </resources>
