--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,23 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#ED19B7FF</item>
-        <item name="colorPrimaryVariant">#ED19B7FF</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#FFFFFF</item>
+        <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
-    <color name="purple_500">#ED19B7FF</color>
-    <color name="purple_200">purple_500</color>
-    <color name="purple_700">purple_700</color>
-    <color name="white"><![CDATA[white</item>]]></color>
-    <color name="teal_200">#FFFFFF</color>
-    <color name="teal_700">teal_700</color>
-    <color name="black">black</color>
 </resources>
