--- a/app/src/main/res/drawable/edit_text.xml
+++ b/app/src/main/res/drawable/edit_text.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="15dp"/>
     <stroke android:width="2dp"
-            android:color="#030303"/>
+            android:color="#D3D3D3"/>
 </shape>
