--- a/app/src/main/res/layout/activity_complaint_pg.xml
+++ b/app/src/main/res/layout/activity_complaint_pg.xml
@@ -7,45 +7,50 @@
     android:layout_marginTop="10dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="0dp"
     tools:context=".complaint_pg">
 
     <EditText
         android:id="@+id/e1"
-        android:layout_width="409dp"
-        android:layout_height="71dp"
+        android:layout_width="411dp"
+        android:layout_height="60dp"
+        android:background="@drawable/edit_text"
         android:ems="10"
-        android:hint="Full Name"
+        android:hint=" Full Name"
         android:inputType="textPersonName"
+        android:textSize="20sp"
         tools:layout_editor_absoluteX="-1dp"
         tools:layout_editor_absoluteY="1dp" />
 
     <EditText
         android:id="@+id/e2"
         android:layout_width="411dp"
-        android:layout_height="165dp"
+        android:layout_height="187dp"
+        android:background="@drawable/edit_text"
         android:ems="10"
-        android:hint="Write Compaint here"
+        android:hint=" Write Compaint here"
         android:inputType="textPersonName"
+        android:textSize="20sp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="92dp" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="Camera" />
+        android:layout_width="77dp"
+        android:layout_height="wrap_content"
+        android:text="Cam" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="279dp" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="match_parent"
+        android:layout_width="118dp"
         android:layout_height="wrap_content"
         android:text="Submit"
         tools:layout_editor_absoluteX="160dp"
