--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text"
         android:ems="10"
-        android:hint="   Username"
+        android:hint="Username"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -39,13 +39,16 @@
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="289dp"
-        android:layout_height="44dp"
+        android:layout_width="304dp"
+        android:layout_height="51dp"
         android:background="@drawable/edit_text"
         android:ems="10"
-        android:hint="   Password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,28 +88,28 @@
         android:id="@+id/textView3"
         android:layout_width="128dp"
         android:layout_height="19dp"
+        android:layout_marginTop="8dp"
         android:gravity="right"
-        android:text="Forgot passowrd?"
+        android:text="Forgot passoword?"
         android:textSize="15sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.784"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/spinner1"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.151" />
+        app:layout_constraintVertical_bias="0.066"
+        tools:layout_editor_absoluteX="230dp" />
 
     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="237dp"
         android:layout_height="38dp"
+        android:background="@drawable/edit_text"
+        android:gravity="center"
         android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.621"
+        app:layout_constraintVertical_bias="0.656"
         tools:ignore="MissingConstraints" />
 
 
